--- a/flume/conf/pool-to-hdfs_partition_interceptor.properties
+++ b/flume/conf/pool-to-hdfs_partition_interceptor.properties
@@ -2,22 +2,22 @@
 agent1.sources = source1
 agent1.channels = channel1 
 agent1.sinks = sink1
-agent1.interceptor = i1
+agent1.interceptors = i1
 
 # Describing/Configuring the source 
 agent1.sources.source1.type = spooldir
 agent1.sources.source1.spoolDir = /tmp/spooldir
 
 # Describing/Configuring the channel
-agent1.channels.channel1.type = file
+agent1.channels.channel1.type = memory
 
 # Describing/Configuring the interceptor
-agent1.sources.source1.interceptor.i1 = timestamp
-agent1.sources.source1.interceptor.preserveExisting = true
+agent1.sources.source1.interceptors.i1.type = timestamp
+agent1.sources.source1.interceptors.i1.preserveExisting = true
 
 # Describing/Configuring the sink
 agent1.sinks.sink1.type = hdfs
-agent1.sinks.sink1.hdfs.path = /tmp/flume
+agent1.sinks.sink1.hdfs.path = /tmp/flume/year=%Y/month=%m/day=%d
 agent1.sinks.sink1.hdfs.filePrefix = events
 agent1.sinks.sink1.hdfs.fileSuffix = .log
 agent1.sinks.sink1.hdfs.inUsePrefix = _ 
@@ -26,5 +26,4 @@ agent1.sinks.sink1.hdfs.fileType = DataStream
 # Binding the source and sink to the channel / interceptor
 agent1.sources.source1.channels = channel1
 agent1.sinks.sink1.channel = channel1
-agent1.sources.source1.interceptor = i1
-
+agent1.sources.source1.interceptors = i1
